<resources>
    <string name="app_name">RecipeApp</string>
    <string name="find_recipes">Find recipes</string>
    <string name="log_in">log in</string>
    <string name="app_icon">app icon</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_Google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="logo">logo</string>
    <string name="save">SAVE</string>


</resources>
