<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignInActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="385dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="24dp"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signIn"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@color/grey_300"
        android:textColor="@color/darkGrey"
        app:buttonSize="wide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintVertical_bias="0.457" />


    <ImageView
        android:id="@+id/icon"
        android:layout_width="151dp"
        android:layout_height="123dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/aid"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/et_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/intro_description_color"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/intro_description_color"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/password" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/intro_description_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_signIn"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_remember_password"
        android:textColor="@color/intro_description_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <View
        android:id="@+id/divider_left"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="67dp"
        android:background="@color/grey_300"
        app:layout_constraintBottom_toTopOf="@+id/google_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider_right"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="67dp"
        android:background="@color/grey_300"
        app:layout_constraintBottom_toTopOf="@+id/google_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toTopOf="@+id/google_signIn"
        app:layout_constraintEnd_toEndOf="@+id/divider_right"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/divider_right"
        app:layout_constraintStart_toStartOf="@+id/divider_left"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintVertical_bias="0.241" />


</androidx.constraintlayout.widget.ConstraintLayout>